feat: implement critical features (B1-B16), fix build errors, CORS and proxy setup
- B1-B6: User ownership, data filtering, log bug fixes
- B7: Fix ReminderScheduler method signature (sendNotification overload)
- B8: Real email notification via JavaMailSender with HTML templates
- B9: Recurring reminder scheduling (HOURLY/DAILY/WEEKLY/CUSTOM)
- B10: NotificationLog entity, repository, service, controller
- B11: Pagination support (PageResponse DTO, /paged endpoints)
- B12: User profile page + password change (frontend + backend)
- B13: Forgot password flow with email token reset
- B14: Invite code validation + group joining (public endpoints)
- B15: Timezone support on User entity
- B16: Error boundary, Next.js error pages, 404 page, empty states
- Fix ContactMapper/Service/Controller type mismatches (ContactRequest vs ContactResponse)
- Fix String-to-Long id conversion in ContactService
- Fix CORS: configure SecurityConfig with CorsConfigurationSource, disable CSRF
- Use Next.js proxy rewrites to avoid cross-origin issues
- Remove deprecated backend-old and frontend-old directories

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>